Testing shows that the scope list has to be repeated
That compounds can't be copied around is NOT well documented. It just
doesn't work right when tried.

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -210,7 +210,8 @@ spring:
           hbp-ebrains:
             client-id: ${spalloc.auth.openid.id}
             client-secret: ${spalloc.auth.openid.secret}
-            scope: ${spalloc.auth.openid.scopes}
+            # Repeated from spalloc.auth.openid.scopes, but can't share!
+            scope: [ openid, profile, email ]
             authorization-grant-type: authorization_code
             redirect-uri: https://{baseHost}{basePort}{basePath}/system/perform_oidc/{action}/code/{registrationId}
         provider:
