--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<spring.version>5.3.14</spring.version>
 		<jackson.version>2.13.1</jackson.version>
 		<sqlite.version>3.36.0.3</sqlite.version>
+		<spring.boot.version>2.4.7</spring.boot.version>
+
+		<jackson.version>2.12.3</jackson.version>
+		<swagger.version>3.50.0</swagger.version>
+		<jsontaglib.version>1.0.5</jsontaglib.version>
+		<build-helper.version>3.2.0</build-helper.version>
+		<commons-math.version>3.6.1</commons-math.version>
+		<truststore-maven-plugin.version>2.4.0</truststore-maven-plugin.version>
+
+		<jython.version>2.7.2</jython.version>
+		<exec.version>3.0.0</exec.version>
 	</properties>
 
 	<dependencyManagement>
@@ -209,6 +220,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>info.picocli</groupId>
 				<artifactId>picocli</artifactId>
 				<version>4.6.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.python</groupId>
+				<artifactId>jython-slim</artifactId>
+				<version>${jython.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
