Moving version bindings around in the POMs

--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -27,9 +27,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	<artifactId>SpiNNaker-allocserv</artifactId>
 	<packaging>war</packaging>
 	<properties>
-		<npm_plugin.version>1.12.0</npm_plugin.version>
 		<node.version>v14.17.6</node.version>
-		<closure-compiler.version>2.21.0</closure-compiler.version>
 
 		<!-- These ought to be one, but of course they aren't. -->
 		<typescript-language.version>ES6</typescript-language.version>
@@ -39,6 +37,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<start.class>uk.ac.manchester.spinnaker.alloc.ServiceConfig</start.class>
 		<!-- TLS-secured connection that we need to make at runtime startup. -->
 		<ebrains.wellknown.url>https://iam.ebrains.eu/auth/realms/hbp/.well-known/openid-configuration</ebrains.wellknown.url>
+		<truststore.file>${project.build.directory}/generated-resources/truststore.p12</truststore.file>
+		<truststore.pass>hunter2</truststore.pass>
 	</properties>
 
 	<build>
@@ -51,7 +51,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<filtering>true</filtering>
 			</resource>
 			<resource>
-				<directory>target/generated-resources</directory>
+				<directory>${project.build.directory}/generated-resources</directory>
 			</resource>
 		</resources>
 		<finalName>spalloc</finalName>
@@ -173,8 +173,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 						</goals>
 						<phase>generate-resources</phase>
 						<configuration>
-							<truststoreFile>${project.build.directory}/generated-resources/truststore.p12</truststoreFile>
-							<truststorePassword>hunter2</truststorePassword>
+							<truststoreFile>${truststore.file}</truststoreFile>
+							<truststorePassword>${truststore.pass}</truststorePassword>
 							<urls>
 								<url>${ebrains.wellknown.url}</url>
 							</urls>
@@ -209,7 +209,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
-					<version>${spring.boot.version}</version>
 					<configuration>
 						<systemPropertyVariables>
 							<java.util.logging.manager>org.apache.logging.log4j.jul.LogManager</java.util.logging.manager>
@@ -219,7 +218,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<plugin>
 					<groupId>com.github.eirslett</groupId>
 					<artifactId>frontend-maven-plugin</artifactId>
-					<version>${npm_plugin.version}</version>
 					<configuration>
 						<nodeVersion>${node.version}</nodeVersion>
 						<installDirectory>${project.build.directory}</installDirectory>
@@ -231,14 +229,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					</configuration>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>${build-helper.version}</version>
-				</plugin>
-				<plugin>
 					<groupId>com.github.blutorange</groupId>
 					<artifactId>closure-compiler-maven-plugin</artifactId>
-					<version>${closure-compiler.version}</version>
 					<configuration>
 						<baseSourceDir>${project.build.directory}</baseSourceDir>
 						<baseTargetDir>${project.build.buildDirectory}</baseTargetDir>
@@ -250,7 +242,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<plugin>
 					<groupId>uk.co.automatictester</groupId>
 					<artifactId>truststore-maven-plugin</artifactId>
-					<version>${truststore-maven-plugin.version}</version>
 					<configuration>
 						<trustAllCertificates>true</trustAllCertificates>
 						<truststoreFormat>PKCS12</truststoreFormat>
@@ -262,14 +253,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- Import dependency management from Jackson; overrides Spring Boot -->
-			<dependency>
-				<groupId>com.fasterxml.jackson</groupId>
-				<artifactId>jackson-bom</artifactId>
-				<version>${jackson.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 			<dependency>
 				<!-- Import dependency management from Spring Boot -->
 				<groupId>org.springframework.boot</groupId>
@@ -292,11 +275,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>spring-webmvc</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-math3</artifactId>
-				<version>${commons-math.version}</version>
-			</dependency>
 
 			<!-- Something is forcing these to otherwise be wrong -->
 			<dependency>
@@ -310,17 +288,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>log4j-jul</artifactId>
 				<version>${log4j.version}</version>
 				<scope>runtime</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.webjars</groupId>
-				<artifactId>swagger-ui</artifactId>
-				<version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.github.livesense</groupId>
-				<artifactId>org.liveSense.scripting.jsp.taglib.jsonatg</artifactId>
-				<version>${jsontaglib.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -365,8 +332,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
