--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<javadoc.version>3.3.1</javadoc.version>
 		<testing.version>3.0.0-M5</testing.version>
 
-		<spring.version>5.3.14</spring.version>
+		<spring.version>5.3.15</spring.version>
 		<spring.boot.version>2.6.2</spring.boot.version>
 		<spring.security.version>5.6.1</spring.security.version>
 
@@ -65,6 +65,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>com.fasterxml.jackson</groupId>
 				<artifactId>jackson-bom</artifactId>
 				<version>${jackson.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-framework-bom</artifactId>
+				<version>${spring.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -192,16 +199,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 				<version>${cxf.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-webmvc</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-web</artifactId>
-				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
