--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 		<spring.version>5.3.15</spring.version>
 		<spring.boot.version>2.6.2</spring.boot.version>
+		<!--
+		DKF: if you update spring.boot.version, also update the annotation
+		  processor binding in SpiNNaker-allocserv:
+
+		  Properties => Java Compiler => Annotation Processing => Factory Path
+
+		  Failure to do this leads to strange misbehaviour in tooltips when
+		  editing application.yml
+		-->
 		<spring.security.version>5.6.1</spring.security.version>
 
 		<cxf.version>3.4.5</cxf.version>
