--- a/SpiNNaker-pacman/pom.xml
+++ b/SpiNNaker-pacman/pom.xml
@@ -20,8 +20,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>uk.ac.manchester.spinnaker</groupId>
-		<artifactId>SpiNNaker</artifactId>
+		<artifactId>versions</artifactId>
 		<version>6.0.1-SNAPSHOT</version>
+		<relativePath>../versions</relativePath>
 	</parent>
 	<artifactId>SpiNNaker-pacman</artifactId>
 	<description>Implementation of the Partitioning and Configuration Manager (PACMAN).</description>
