--- a/pom.xml
+++ b/pom.xml
@@ -445,6 +445,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					<version>1.0</version>
 				</plugin>
 				<plugin>
+					<groupId>org.apache.sling</groupId>
+					<artifactId>jspc-maven-plugin</artifactId>
+					<version>2.3.0</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.rat</groupId>
 					<artifactId>apache-rat-plugin</artifactId>
 					<version>0.13</version>
