--- a/pom.xml
+++ b/pom.xml
@@ -447,7 +447,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<plugin>
 					<groupId>org.apache.sling</groupId>
 					<artifactId>jspc-maven-plugin</artifactId>
-					<version>2.3.0</version>
+					<version>2.3.2</version>
+					<dependencies>
+						<!-- WHY ARE THESE NOT JUST PROVIDED BY DEFAULT?! -->
+						<dependency>
+							<groupId>org.apache.sling</groupId>
+							<artifactId>org.apache.sling.feature</artifactId>
+							<version>1.2.30</version>
+						</dependency>
+						<dependency>
+						    <groupId>org.osgi</groupId>
+						    <artifactId>org.osgi.framework</artifactId>
+						    <version>1.10.0</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.rat</groupId>
