Don't run the JSP compiler in the validation flow, where it fails
It's good enough that it runs during the primary build-and-test flow.
The failure is due to it not liking unpacked libraries, which is a dumb
error but one that is easy to work around by putting the JSP compile in
a profile that we can disable.

--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -183,20 +183,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<!-- JSP syntax check via pre-compilation -->
-				<groupId>org.apache.sling</groupId>
-				<artifactId>jspc-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>check-jsp</id>
-						<goals>
-							<goal>jspc</goal>
-						</goals>
-						<phase>compile</phase>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 
 		<pluginManagement>
@@ -479,6 +465,29 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					<artifactId>spring-boot-devtools</artifactId>
 				</dependency>
 			</dependencies>
+		</profile>
+		<profile>
+			<id>jsp-precompile</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<!-- JSP syntax check via pre-compilation -->
+						<groupId>org.apache.sling</groupId>
+						<artifactId>jspc-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<goals>
+									<goal>jspc</goal>
+								</goals>
+								<phase>compile</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
