--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+
 # Copyright (c) 2020 The University of Manchester
 #
 # This program is free software: you can redistribute it and/or modify
