--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -158,6 +158,10 @@ spalloc:
   quota:
     # Default user quota in board-seconds
     default-quota: 130
+    # Default quota for organisations inflated from OpenID
+    default-org-quota: 0
+    # Default quota for collabratories inflated from OpenID
+    default-collab-quota: 3600000
     # When do we consolidate job quotas into the main quota table
     consolidation-schedule: "0 0 * * * *"
   transceiver:
