Group membership synch implementation
If there's a better way than loading the stuff into a temp table, I
don't know it. Using a temp table is easy, but requires a bit of a dance
because the queries that use it won't even compile until after the table
exists. (Adding memberships wouldn't need it, but removing them
definitely does as it needs a view of the whole set at once!)

--- a/pom.xml
+++ b/pom.xml
@@ -484,6 +484,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<exclude>**/*.md</exclude>
 							<exclude>**/dependency-reduced-pom.xml</exclude>
 							<exclude>**/.dbeaver/**</exclude>
+							<exclude>**/*.erd</exclude>
 							<exclude>**/node_modules/**</exclude>
 						</excludes>
 						<consoleOutput>true</consoleOutput>
