Making this more like a Spring component
Includes embedding the actual firmware binaries. Rebuilding these is
totally beyond what I know how to do; they're FPGA configurations and
that's hardware stuff!

--- a/pom.xml
+++ b/pom.xml
@@ -478,6 +478,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<exclude>**/*.txt</exclude>
 							<exclude>**/*.csv</exclude>
 							<exclude>**/*.fig</exclude>
+							<exclude>**/*.bit</exclude>
 							<exclude>**/nbproject/**</exclude>
 							<exclude>**/target/**</exclude>
 							<!-- Fooling markdown parsers and RAT is hard -->
