--- a/pom.xml
+++ b/pom.xml
@@ -456,20 +456,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<plugin>
 					<groupId>org.apache.sling</groupId>
 					<artifactId>jspc-maven-plugin</artifactId>
-					<version>2.3.2</version>
-					<dependencies>
-						<!-- WHY ARE THESE NOT JUST PROVIDED BY DEFAULT?! -->
-						<dependency>
-							<groupId>org.apache.sling</groupId>
-							<artifactId>org.apache.sling.feature</artifactId>
-							<version>1.2.30</version>
-						</dependency>
-						<dependency>
-							<groupId>org.osgi</groupId>
-							<artifactId>org.osgi.framework</artifactId>
-							<version>1.10.0</version>
-						</dependency>
-					</dependencies>
+					<version>2.3.0</version>
+					<!-- 2.3.2 is BROKEN, and we don't need it anyway -->
 				</plugin>
 				<plugin>
 					<groupId>org.apache.rat</groupId>
