--- a/SpiNNaker-allocserv/src/main/frontend/package.json
+++ b/SpiNNaker-allocserv/src/main/frontend/package.json
@@ -10,6 +10,7 @@
 	},
 	"browser": "Chrome",
 	"scripts": {
-		"build": "tsc ${TYPESCRIPT_SRC_DIR:=../typescript}/*.ts --target ${TYPESCRIPT_TARGET:=ES6} --removeComments --outFile ${MAVEN_BUILD_DIR:=../../../target}/js/spinnaker.js"
+		"build": "tsc ${TYPESCRIPT_SRC_DIR:=../typescript}/*.ts --target ${TYPESCRIPT_TARGET:=es6} --removeComments --outFile ${MAVEN_BUILD_DIR:=../../../target}/js/spinnaker.js",
+		"build-win": "tsc %TYPESCRIPT_SRC_DIR%\\spinnaker.ts --target %TYPESCRIPT_TARGET% --removeComments --outFile %MAVEN_BUILD_DIR%\\js\\spinnaker.js"
 	}
 }
