--- a/pom.xml
+++ b/pom.xml
@@ -449,6 +449,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<exclude>README.md</exclude>
 							<exclude>SECURITY.md</exclude>
 							<exclude>**/dependency-reduced-pom.xml</exclude>
+							<exclude>.gitattributes</exclude>
 						</excludes>
 						<consoleOutput>true</consoleOutput>
 					</configuration>
