Try to send email about dead boards when detected by BMP controller
The messages are likely to be fairly abbreviated

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -123,13 +123,14 @@ spalloc:
       specific-board: 65.0
     # Number of reports of board problems at which the board is taken out of service.
     report-action-threshold: 2
-    report-email:
-      # In addition to configuring the email sender, you need to turn on
-      # sending here too.
-      send: false
-      from: spalloc@localhost
-      to: SPINNAKER@listserv.manchester.ac.uk
-      subject: Spalloc Board Issue
+  # Sending of emails relating to board problems: where to, etc.
+  report-email:
+    # In addition to configuring the email sender, you need to turn on
+    # sending here too.
+    send: false
+    from: spalloc@localhost
+    to: SPINNAKER@listserv.manchester.ac.uk
+    subject: Spalloc Board Issue
   auth:
     # Support HTTP Basic Authentication (bad for browsers, OK for code, slow)
     basic: true
